Closed Bug 12494 Opened 25 years ago Closed 25 years ago

Filters with operator IS don't work

Categories

(MailNews Core :: Backend, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: phil, Assigned: phil)

Details

1. Migrated my profile from 4.x to 5.0
2. When I select my IMAP Inbox, the status bar shows a filter firing when it
shouldn't be
3. The filter which is firing incorrectly has an "is" term, e.g. "subject is
jstest"

Turns out there's a porting error in the filter code where we misinterpret the
return code from nsString::Equals. I have a fix.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Fixed in nsMsgSearchTerm.cpp
QA Contact: lchiang → laurel
Works at basic level using sender/IS or subject/IS in single criteria filter
using 1999092308 Win32 on NT 4.0 with IMAP. Haven't yet verified all platforms
and combinations...
Status: RESOLVED → VERIFIED
Generally working IMAP and POP for all platforms. Any specific issues found
using IS operator will be logged separatell.

OK using 1999-10-20-09m11 commercial build on NT 4.0
OK using 1999-10-20-08m11 commercial build on linux 6.0
OK using 1999-10-20-08m11 commercial build on mac OS 8.5.1
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.