Fix bug 12494. We were misinterpreting the return code from nsString::Equals, so 'is' filters were misfiring